@@ -39,10 +39,12 @@ public class EntityFactoryTest extends AbstractSocializeObjectFactoryTest<MockEn
 	final String mockName = "test name";
 	final String mockKey = "test key";
 	final String mockMeta = "test meta";
-	final Integer mockLikes = new Integer(1);
-	final Integer mockShares = new Integer(2);
-	final Integer mockComments = new Integer(3);
-	final Integer mockViews = new Integer(4);
+	final String mockType = "test type";
+	final Integer mockLikes = Integer.valueOf(1);
+	final Integer mockShares =  Integer.valueOf(2);
+	final Integer mockComments = Integer.valueOf(3);
+	final Integer mockViews =  Integer.valueOf(4);
+	final Integer mockActivity =  Integer.valueOf(10);
 
 	protected EntityStatsImpl stats;
 	protected UserEntityStatsImpl userStats;
@@ -53,9 +55,11 @@ public class EntityFactoryTest extends AbstractSocializeObjectFactoryTest<MockEn
 		AndroidMock.expect(object.getName()).andReturn(mockName);
 		AndroidMock.expect(object.getKey()).andReturn(mockKey);
 		AndroidMock.expect(object.getMetaData()).andReturn(mockMeta);
+		AndroidMock.expect(object.getType()).andReturn(mockType);
 		AndroidMock.expect(json.put("name", mockName)).andReturn(json);
 		AndroidMock.expect(json.put("key", mockKey)).andReturn(json);
 		AndroidMock.expect(json.put("meta", mockMeta)).andReturn(json);
+		AndroidMock.expect(json.put("type", mockType)).andReturn(json);
 	}
 
 	@Override
@@ -76,6 +80,8 @@ public class EntityFactoryTest extends AbstractSocializeObjectFactoryTest<MockEn
 		AndroidMock.expect(json.has("comments")).andReturn(true);
 		AndroidMock.expect(json.has("views")).andReturn(true);
 		AndroidMock.expect(json.has("meta")).andReturn(true);
+		AndroidMock.expect(json.has("type")).andReturn(true);
+		AndroidMock.expect(json.has("total_activity")).andReturn(true);
 
 		AndroidMock.expect(json.isNull("name")).andReturn(false);
 		AndroidMock.expect(json.isNull("key")).andReturn(false);
@@ -84,14 +90,21 @@ public class EntityFactoryTest extends AbstractSocializeObjectFactoryTest<MockEn
 		AndroidMock.expect(json.isNull("comments")).andReturn(false);
 		AndroidMock.expect(json.isNull("views")).andReturn(false);
 		AndroidMock.expect(json.isNull("meta")).andReturn(false);
+		AndroidMock.expect(json.isNull("type")).andReturn(false);
+		AndroidMock.expect(json.isNull("total_activity")).andReturn(false);
 
 		AndroidMock.expect(json.getString("name")).andReturn(mockName);
 		AndroidMock.expect(json.getString("key")).andReturn(mockKey);
 		AndroidMock.expect(json.getString("meta")).andReturn(mockMeta);
+		AndroidMock.expect(json.getString("type")).andReturn(mockType);
 		AndroidMock.expect(json.getInt("likes")).andReturn(mockLikes);
 		AndroidMock.expect(json.getInt("shares")).andReturn(mockShares);
 		AndroidMock.expect(json.getInt("views")).andReturn(mockViews);
 		AndroidMock.expect(json.getInt("comments")).andReturn(mockComments);
+		AndroidMock.expect(json.getInt("total_activity")).andReturn(mockActivity);
+		
+		
+		
 		
 		AndroidMock.expect(json.has("user_action_summary")).andReturn(true);
 		AndroidMock.expect(json.isNull("user_action_summary")).andReturn(false);
@@ -112,11 +125,13 @@ public class EntityFactoryTest extends AbstractSocializeObjectFactoryTest<MockEn
 		object.setName(mockName);
 		object.setKey(mockKey);
 		object.setMetaData(mockMeta);
+		object.setType(mockType);
 
 		stats.setLikes(mockLikes);
 		stats.setShares(mockShares);
 		stats.setViews(mockViews);
 		stats.setComments(mockComments);
+		stats.setTotalActivityCount(mockActivity);
 		
 		userStats.setLiked(true);
 		userStats.setShares(mockShares);
